// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Button with outline 1`] = `
<button
  className="button outline primary"
  disabled={false}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders a custom theme button 1`] = `
<button
  className="button customCssModuleClass"
  disabled={false}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders a disabled Button 1`] = `
<button
  className="button primary"
  disabled={true}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders a full width button 1`] = `
<button
  className="button fullWidth primary"
  disabled={false}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders a mobile full width button 1`] = `
<button
  className="button mobileFullWidth primary"
  disabled={false}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders button without crashing 1`] = `
<button
  className="button primary"
  disabled={false}
  id={null}
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;

exports[`Renders react-router anchor button without crashing 1`] = `
<div
  className=""
>
  <a
    className="button primary"
    disabled={false}
    href="/test"
    id={null}
    onClick={[Function]}
    title={null}
  >
    Button
  </a>
</div>
`;

exports[`Renders simple anchor button without crashing 1`] = `
<div
  className=""
>
  <a
    className="button primary"
    disabled={false}
    href="/"
    id={null}
    onClick={null}
    title={null}
  >
    Button
  </a>
</div>
`;

exports[`can have optional ID attribute 1`] = `
<button
  className="button primary"
  disabled={false}
  id="someId"
  onClick={[Function]}
  title={null}
  type="submit"
>
  Test
</button>
`;
